# stikka-mqtt

./: .gitignore  90-brother_ql.rules  90-seiko_slp.rules  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  DEVSHELL.md  README.md  ZPL_test.py  address_label_webui.py  brother_ql_test.py  default_config.json  flake.nix  helpers.py  image_utls.py  install.sh  label.py  label_helper.py  labelprinter.py  logger.py  main.py  print_it.py  printer_debug.py  printer_ql.py  printer_registry.py  printer_zpl.py  printers_config.json  pyproject.toml  seiko_test.py  stikka-NG.service  stikka.py  stikka_config.py  stikka_factory.py  stikka_factory.sh  stikka_label_helper.py  stikka_print_it.py  stikka_webui.py  stikka_webui_handler.py  styles.css  tab_address.py  (+10 more)
.github/workflows/: deploy-pages.yml
esp32/: README.md  platformio.ini
esp32/src/: config.cpp  config.h  logging.cpp  logging.h  main.cpp  mqtt_bridge.cpp  mqtt_bridge.h  status_led.cpp  status_led.h  web_ui.cpp  web_ui.h  wifi_manager.cpp  wifi_manager.h
examples/: ZPL_test.py  brother_ql_test.py  diagnose_printers.py  diagnose_status.py  test_print_wait.py  test_simple_print.py  test_status_refresh.py
fonts/: GitHubFileDownloader.sh  get_fonts.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
labelprinter/: printer_abstract.py  printer_debug.py  printer_ql.py  printer_zpl.py
local-test/: README.md  run-stack.sh  stop-stack.sh
scripts/: build-firmware.sh  generate-fonts-index.sh  get_fonts.sh  mosquitto.conf  rebuild-all.sh  run-stack.sh  stop-stack.sh
webui/: registry.py
(+57 files in other folders)
