[project]
name = "stikka-ng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "brother-ql-inventree>=1.3",
    "flask-cors>=6.0.2",
    "flask-sock>=0.7.0",
    "marimo>=0.21.1",
    "python-barcode[images]>=0.16.1",
    "qrcode>=8.2",
    "reactpy>=1.1.0",
    "rich>=14.3.3",
    "zpl>=0.1.13",
]
