[project]
name = "stikka-NG"
version = "0.1.0"
description = "Stikka-NG is a web-based label printing application built with NiceGUI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brother-ql-inventree>=1.3",
    "nicegui>=3.9.0",
    "pillow>=11.0.0",
    "pypdfium2>=4.30.0",
    "pyusb>=1.0.0",
    "requests>=2.33.1",
    "rich>=14.3.3",
    "zpl>=0.1.13",
]
