[project]
name = "stikka-NG"
version = "0.1.0"
description = "Stikka-NG is a web-based label printing application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brother-ql-inventree>=1.3",
    "fastapi>=0.115.0",
    "pillow>=11.0.0",
    "pyusb>=1.0.0",
    "requests>=2.33.1",
    "rich>=14.3.3",
    "uvicorn>=0.34.0",
    "zpl>=0.1.13",
]
